fixed the contact list and the blog reader, changed the overflow settings to compensate for chrome

--- a/src/Css/Blog.css
+++ b/src/Css/Blog.css
@@ -1,15 +1,15 @@
 
 .blogContainer {
   display:grid;
-  align-items: center;
   justify-content: center;
-  height: 120vh;
+  height: 80vh;
   width: 80vw;
   margin: auto;
   margin-bottom: 200px;
   color: white;
   grid-template-columns: 200px 1fr;
   grid-gap: 5px;
+  overflow: auto;
 }
 
 .sideBar {
@@ -42,11 +42,11 @@
 }
 
 .articleReader {
-  height: 100%;
+  height: auto;
   max-height:100%;
   display: grid;
-  background-color: lightgrey;
   overflow: auto;
+  background-color: lightgrey;
   justify-items: center
 }
 
